--- a/src/components/Mint.css
+++ b/src/components/Mint.css
@@ -72,3 +72,18 @@
     color:#fff;
     box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%);
 }
+
+.sucess-msg{
+    width:60vw;
+    font-size: 1em;
+    padding-bottom: 40px;
+}
+.success-btns{
+    display: flex;
+    flex-direction: row;
+    gap:10px
+}
+.processing-msg{
+    font-size: 1.2em;
+    color:#f64b14;
+}
