--- a/src/components/Mint.css
+++ b/src/components/Mint.css
@@ -1,6 +1,6 @@
 .mint{
     height:800px;
-    width:100vw;
+    width:100%;
     background-image: url("../images/mint-bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
